MDEV-12546 Wrong metadata or data type for string user variables